fixed cycles DYLIB error